# fvtt-test-ccw

./: .gitignore  Changelog.md  Debug Walkthrough.js  README.md  build_wasm.sh  module.json
debug/: benchmarking.js  debug initialize endpoints.js  debug radius sweep.js  debug sort.js  debug sweep.js
geometry/src/: lib.rs
intersections/: Cargo.toml  points_test.json  segments_intersection_results_brute_double.json  segments_intersection_test.json  segments_random_1000_4000_neg1.json  segments_random_1000_4000_neg2 copy.json  segments_random_1000_4000_neg2.json  segments_random_100_2000_neg1.json  segments_random_100_2000_neg2.json  segments_random_10_1000_neg1 copy.json  segments_random_10_1000_neg1.json  segments_random_10_1000_neg2 copy.json  segments_random_10_1000_neg2.json
intersections/benches/: my_benchmark.rs
intersections/circle/: Cargo.toml
intersections/circle/benches/: my_benchmark.rs
intersections/circle/src/: circle.rs  circle_intersect.rs  combine.rs  js_api.rs  lib.rs
intersections/line/: Cargo.toml  segments_intersection_results_brute_sort_single.json  segments_random_1000_4000_neg1 copy.json  segments_random_1000_4000_neg1.json  segments_random_100_2000_neg1 copy.json  segments_random_100_2000_neg2 copy.json  segments_random_100_2000_neg2.json
intersections/line/benches/: my_benchmark.rs
intersections/line/src/: intersections.rs  js_api.rs  main.rs  segment.rs
intersections/polygon/: Cargo.toml
intersections/polygon/src/: booleanop.rs  clipper.rs  lib.rs  polyhull.rs
intersections/src/: bench_ix.rs  geometry.rs  intersections.rs  js_api.rs  lib.rs  main.rs  point.rs  segment.rs  test_point.rs
scripts/: ActiveEdgesIterator.js  Alternate Geometry Methods.js  BalabanIntersections.js  BinarySearch.js  BinarySearchTree.js  CirclePolygonCombine.js  ClockwiseSweepPolygon_updates.js  CountingSort.js  DoubleLinkedList.js  DoubleLinkedObjectList.js  Drawing.js  GPUIntersections.js  GPUIntersections2  GPUIntersections3.js  InsertIntoSortedArray.js  Intersections.js  IntersectionsBrute.js  IntersectionsSort.js  IntersectionsSortAtropos.js  IntersectionsSortOriginal.js  IntersectionsSweep.js  IntersectionsSweepBST.js  IntersectionsSweepCombinedEvents.js  IntersectionsSweepCombinedSkip.js  IntersectionsSweepLinked.js  IntersectionsSweepMyers.js  IntersectionsSweepSkipList.js  LimitedAngle.js  LinkedPolygon.js  LinkedPolygon2.js  MulmuleyIntersections.js  MyClockwiseSweep.js  MyClockwiseSweepPolygon.js  MyClockwiseSweepPolygon1.js  MyClockwiseSweepPolygon2.js  MyClockwiseSweepPolygon3.js  MyClockwiseSweepPolygon4.js  MyPolygon.js  NormalizedCirclePoints.js  OrderedArray.js  (+49 more)
scripts/PolygonIntersections/: LinkedPolygon.js
scripts/amejiarosario/: Heap.js  PriorityQueue.js
scripts/lib/: SweepIntersection.js  concave_bundle.js  concaveman.bundle.js  concaveman_lib.js  gpu-browser-core.js  gpu-browser.js  incircle.js  incircle.min.js  isect.js  martinez.umd.js  polybool.js  polygon-clipping.umd.js
scripts/lib/lib_polybool/: build-log.js  epsilon.js  geojson.js  intersecter.js  linked-list.js  segment-chainer.js  segment-selector.js
