[package]
name = "intersections"
version = "0.1.0"
edition = "2021"
authors = ["Michael Enion <caewok_2000@yahoo.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
getrandom = { version = "0.2.5", features = ["js"] }
#rayon = "1.5"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
#num = "0.4.0"
js-sys = "0.3.56"

[lib]
crate-type = ["cdylib", "rlib"]



