[package]
name = "intersections_circle"
version = "0.1.0"
edition = "2021"
authors = ["Michael Enion <caewok_2000@yahoo.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = { version = "0.19.0" }
rand = "0.8.5"
getrandom = { version = "0.2.5", features = ["js"] }
num-traits = "0.2.14"
intersections_line = { path = "../line" }

[dev-dependencies]
criterion = "0.3" # benchmarking with criterion https://bheisler.github.io/criterion.rs/book/getting_started.html

[[bench]]
name = "my_benchmark"
harness = false

[lib]
name = "intersections_circle"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

