[package]
name = "intersections_polygon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
old-geo-types = { package = "geo-types", version = "0.6.2" }
wasm-bindgen = "0.2.79"
num-traits = "0.2.14"
geo-booleanop = "0.3.2"
intersections_line = { path = "../line" }
geo = { version = "0.19.0" }

[lib]
name = "intersections_polygon"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
